--- a/AspNetMvc5Base/Views/Produtos/Create.cshtml
+++ b/AspNetMvc5Base/Views/Produtos/Create.cshtml
@@ -10,49 +10,59 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <div class="form-group">
-            @Html.LabelFor(m => m.Nome, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Nome, new { @class = "form-control", @placeholder = "Nome do produto" })
-                @Html.ValidationMessageFor(m => m.Nome, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Descricao, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Descricao, new { @class = "form-control", @placeholder = "Descrição do produto" })
-                @Html.ValidationMessageFor(m => m.Descricao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Preco, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Preco, new { @class = "form-control", @placeholder = "Preço do produto" })
-                @Html.ValidationMessageFor(m => m.Preco, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.CategoriaId, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownListFor(m => m.CategoriaId, new SelectList(ViewBag.Categorias, "CategoriaId", "CategoriaNome"), "Selecione", new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.CategoriaId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.ImageUpload, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.ImageUpload, new { type = "file", @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.ImageUpload, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Salvar" class="btn btn-success" />
-                @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-danger" })
-            </div>
+<div class="form-horizontal">
+    <div class="form-group">
+        @Html.LabelFor(m => m.Nome, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Nome, new { @class = "form-control", @placeholder = "Nome do produto" })
+            @Html.ValidationMessageFor(m => m.Nome, "", new { @class = "text-danger" })
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Descricao, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Descricao, new { @class = "form-control", @placeholder = "Descrição do produto" })
+            @Html.ValidationMessageFor(m => m.Descricao, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Preco, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Preco, new { @class = "form-control", @placeholder = "Preço do produto" })
+            @Html.ValidationMessageFor(m => m.Preco, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.CategoriaId, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(m => m.CategoriaId, new SelectList(ViewBag.Categorias, "CategoriaId", "CategoriaNome"), "Selecione", new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.CategoriaId, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    @*Somente pçara exemplo*@
+    @*<div class="form-group">
+        <label class="control-label col-md-2">Combo Multiplos</label>
+        <div class="col-md-10">
+            @Html.DropDownList("CategoriaId", (MultiSelectList)ViewBag.CategoriasMultiplas, new { multiple = "multiple", @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.CategoriaId, "", new { @class = "text-danger" })
+        </div>
+    </div>*@
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.ImageUpload, new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.ImageUpload, new { type = "file", @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.ImageUpload, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Salvar" class="btn btn-success" />
+            @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-danger" })
+        </div>
+    </div>
+</div>
 
 
 }
